<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/root_dialog_edit"
        android:padding="12dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_image"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:fontFamily="@font/lato"
            android:textFontWeight="700"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera"
            android:padding="18dp"
            android:layout_marginVertical="18dp"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintRight_toLeftOf="@id/btn_album"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textAllCaps="false"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Album"
            android:padding="18dp"
            android:layout_marginVertical="18dp"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintLeft_toRightOf="@id/btn_camera"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintRight_toRightOf="parent"
            android:textAllCaps="false"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>