<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragment.message.CreateMessageFragment">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/view_head"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/bg_splash"
            app:layout_constraintHeight_percent=".28"/>

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:scaleType="center"
            android:src="@drawable/ic_arrow_left_white_icon"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="23dp"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/label_create_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="@string/create_message"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/img_back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/img_back" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginRight="12dp"
            app:layout_constraintBottom_toBottomOf="@id/img_back"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/img_back" />


        <EditText
            android:id="@+id/edt_find_friend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_image_add_message"
            android:hint="@string/find_friend"
            android:drawablePadding="12dp"
            android:padding="11dp"
            android:layout_marginTop="26dp"
            android:layout_marginHorizontal="12dp"
            android:drawableLeft="@drawable/ic_search_blue_icon"
            app:layout_constraintTop_toBottomOf="@id/img_back"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent=".23"
            android:orientation="horizontal"
            android:id="@+id/guideline_h.23"/>
        <androidx.constraintlayout.widget.Guideline
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent=".262"
            android:orientation="horizontal"
            android:id="@+id/guideline_h.262"/>

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/bg_rcv_message"
            android:padding="12dp"
            android:layout_marginTop="22dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_find_friend"/>

        <TextView
            android:id="@+id/label_list_friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#999999"
            android:text="@string/listFriend"
            android:textAllCaps="true"
            android:fontFamily="@font/lato"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="12dp"
            app:layout_constraintTop_toTopOf="@id/view"
            android:layout_marginTop="26dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_list_friend"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/bg_rcv_message"
            android:padding="12dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="@id/view"
            app:layout_constraintLeft_toLeftOf="@id/view"
            android:layout_marginVertical="12dp"
            android:layout_marginTop="9dp"
            app:layout_constraintTop_toBottomOf="@id/label_list_friend"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>