<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_edit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragment.profile.EditProfileFragment">

        <View
            android:id="@+id/view_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/bg_splash"
            app:layout_constraintHeight_percent="0.281"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginTop="23dp"
            android:layout_marginBottom="36dp"
            android:scaleType="center"
            android:src="@drawable/ic_arrow_left_white_icon"
            app:layout_constraintBottom_toTopOf="@id/view"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_label_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="@string/edit_infomation"
            android:textColor="@color/white"
            android:textFontWeight="800"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/img_back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/img_back" />

        <TextView
            android:id="@+id/tv_save"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginHorizontal="12dp"
            android:fontFamily="@font/lato"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textFontWeight="500"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/img_back"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/img_back" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/bg_profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_back" />

        <!--        app:layout_constraintHeight_percent=".8485"-->
        <ImageView
            android:id="@+id/image"
            android:layout_width="143dp"
            android:layout_height="143dp"
            android:background="@drawable/bg_item_message"
            android:scaleType="center"
            android:src="@drawable/ic_avatar_user_default_while_large_icon"
            app:layout_constraintBottom_toBottomOf="@id/image_avatar"
            app:layout_constraintLeft_toLeftOf="@id/image_avatar"
            app:layout_constraintRight_toRightOf="@id/image_avatar"
            app:layout_constraintTop_toTopOf="@id/image_avatar" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_avatar"
            android:layout_width="143dp"
            android:layout_height="143dp"
            android:layout_marginHorizontal="116dp"
            android:layout_marginTop="42dp"
            android:background="@drawable/bg_item_message"
            android:scaleType="centerCrop"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/tv_label_full_name"
            app:layout_constraintLeft_toLeftOf="@id/view"
            app:layout_constraintRight_toRightOf="@id/view"
            app:layout_constraintTop_toTopOf="@id/view" />

        <ImageView
            android:id="@+id/image_camera_photo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/bg_photo_camera_profile"
            android:scaleType="center"
            android:src="@drawable/ic_photo_camera_white_icon"
            app:layout_constraintBottom_toBottomOf="@id/image_avatar"
            app:layout_constraintRight_toRightOf="@id/image_avatar" />

        <TextView
            android:id="@+id/tv_label_full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/lato"
            android:text="@string/full_name"
            android:textAllCaps="true"
            android:textColor="@color/gray_cancel_search_message"
            android:textFontWeight="500"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/edt_full_name"
            app:layout_constraintLeft_toLeftOf="@id/view"
            app:layout_constraintTop_toBottomOf="@+id/image_avatar" />

        <EditText
            android:id="@+id/edt_full_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:drawableRight="@drawable/ic_user_blue_icon"
            android:fontFamily="@font/lato"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textFontWeight="500"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/tv_label_phone_number"
            app:layout_constraintLeft_toLeftOf="@id/view"
            app:layout_constraintRight_toRightOf="@id/view"
            app:layout_constraintTop_toBottomOf="@id/tv_label_full_name" />

        <TextView
            android:id="@+id/tv_label_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/lato"
            android:text="@string/phone_number"
            android:textAllCaps="true"
            android:textColor="@color/gray_cancel_search_message"
            android:textFontWeight="500"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/edt_phone_number"
            app:layout_constraintLeft_toLeftOf="@id/view"
            app:layout_constraintTop_toBottomOf="@+id/edt_full_name" />

        <EditText
            android:id="@+id/edt_phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_phone_blue_icon"
            android:fontFamily="@font/lato"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:text="0987683681"
            android:textColor="@color/black"
            android:textFontWeight="500"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/tv_label_birthday"
            app:layout_constraintEnd_toEndOf="@+id/edt_full_name"
            app:layout_constraintStart_toStartOf="@+id/edt_full_name"
            app:layout_constraintTop_toBottomOf="@id/tv_label_phone_number" />

        <TextView
            android:id="@+id/tv_label_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/lato"
            android:text="@string/birthday"
            android:textAllCaps="true"
            android:textColor="@color/gray_cancel_search_message"
            android:textFontWeight="500"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/edt_birthday"
            app:layout_constraintHeight_percent="0.567"
            app:layout_constraintLeft_toLeftOf="@id/view"
            app:layout_constraintTop_toBottomOf="@+id/edt_phone_number"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/edt_birthday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_birthday_cake_blue_icon"
            android:fitsSystemWindows="true"
            android:fontFamily="@font/lato"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:text="01/04/2000"
            android:textColor="@color/black"
            android:textFontWeight="500"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/edt_phone_number"
            app:layout_constraintHeight_percent=".288"
            app:layout_constraintStart_toStartOf="@+id/edt_phone_number"
            app:layout_constraintTop_toBottomOf="@id/tv_label_birthday"
            app:layout_constraintVertical_bias="0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>