<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray"
        tools:context=".view.fragment.profile.ProfileFragment">

        <ImageView
            android:id="@+id/image_profile"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:background="@drawable/bg_splash"
            app:layout_constraintHeight_percent="0.505"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <View
            android:id="@+id/view_profile"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/bg_profile"
            app:layout_constraintBottom_toBottomOf="@id/image_profile"
            app:layout_constraintHeight_percent="0.156"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <ImageView
            android:id="@+id/image_avatar_user_default"
            android:layout_width="63dp"
            android:layout_height="63dp"
            android:background="@drawable/bg_item_message"
            android:src="@drawable/ic_avatar_user_default_while_large_icon"
            android:scaleType="center"
            app:layout_constraintBottom_toBottomOf="@id/image_avatar_user"
            app:layout_constraintTop_toTopOf="@id/image_avatar_user"
            app:layout_constraintLeft_toLeftOf="@id/image_avatar_user"
            app:layout_constraintRight_toRightOf="@+id/image_avatar_user"/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_avatar_user"
            android:layout_width="63dp"
            android:layout_height="63dp"
            android:background="@drawable/bg_item_message"
            android:src="@drawable/ic_avatar_user_default_while_large_icon"
            android:scaleType="centerCrop"
            android:visibility="invisible"
            android:layout_marginHorizontal="12dp"
            android:layout_marginBottom="2dp"
            app:layout_constraintBottom_toBottomOf="@id/view_profile"
            app:layout_constraintTop_toTopOf="@id/view_profile"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="Awesome chat"
            android:textSize="22sp"
            android:textFontWeight="700"
            android:fontFamily="@font/lato"
            app:layout_constraintLeft_toRightOf="@id/image_avatar_user"
            app:layout_constraintTop_toTopOf="@id/image_avatar_user"
            app:layout_constraintBottom_toTopOf="@+id/tv_user_email"
            android:layout_marginHorizontal="12dp"/>
        <TextView
            android:id="@+id/tv_user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_cancel_search_message"
            android:text="Awesome@gmail.com"
            android:textSize="16sp"
            android:textFontWeight="500"
            android:fontFamily="@font/lato"
            app:layout_constraintLeft_toRightOf="@id/image_avatar_user"
            app:layout_constraintTop_toBottomOf="@id/tv_user_name"
            app:layout_constraintBottom_toBottomOf="@id/image_avatar_user"
            android:layout_marginHorizontal="12dp"/>
        <ImageView
            android:id="@+id/edit_profile"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_pen_blue_icon"
            android:layout_marginHorizontal="12dp"
            app:layout_constraintTop_toTopOf="@id/tv_user_name"
            app:layout_constraintBottom_toBottomOf="@id/tv_user_name"
            app:layout_constraintRight_toRightOf="parent"
            android:scaleType="center"/>

        <View
            android:id="@+id/view_line"
            android:layout_width="0dp"
            android:layout_height="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_profile" />

        <View
            android:id="@+id/view_center"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/view_line_logout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_line" />

        <View
            android:id="@+id/view_languages"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@id/view_notify"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_line" />

        <ImageView
            android:id="@+id/image_languages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:src="@drawable/ic_language_gray_icon"
            app:layout_constraintBottom_toBottomOf="@id/view_languages"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/view_languages" />

        <TextView
            android:id="@+id/tv_label_languages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="@string/languages"
            android:textColor="@color/black"
            android:textFontWeight="500"
            android:textSize="18sp"
            android:layout_marginHorizontal="18dp"
            app:layout_constraintBottom_toBottomOf="@id/view_languages"
            app:layout_constraintLeft_toRightOf="@id/image_languages"
            app:layout_constraintTop_toTopOf="@id/view_languages"/>
        <TextView
            android:id="@+id/tv_languages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:textSize="16sp"
            android:textFontWeight="500"
            android:textColor="@color/blue_start"
            app:layout_constraintBottom_toBottomOf="@id/view_languages"
            app:layout_constraintTop_toTopOf="@id/view_languages"
            app:layout_constraintRight_toLeftOf="@id/image_languages_arrow"
            android:layout_marginHorizontal="18dp"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:background="@color/gray"
            android:layout_marginRight="12dp"
            app:layout_constraintBottom_toBottomOf="@id/view_languages"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/tv_label_languages"/>


        <ImageView
            android:id="@+id/image_languages_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:scaleType="center"
            android:src="@drawable/ic_arrow_right_gray_small_icon"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/view_languages"
            app:layout_constraintTop_toTopOf="@id/view_languages"/>


        <View
            android:id="@+id/view_notify"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@id/view_version"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_languages" />

        <ImageView
            android:id="@+id/image_notify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:src="@drawable/ic_notification_gray_icon"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/view_notify"
            app:layout_constraintBottom_toBottomOf="@id/view_notify"/>
        <ImageView
            android:id="@+id/image_notify_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:scaleType="center"
            android:src="@drawable/ic_arrow_right_gray_small_icon"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/view_notify"
            app:layout_constraintBottom_toBottomOf="@id/view_notify"/>

        <TextView
            android:id="@+id/tv_label_notify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:text="@string/notify"
            android:textSize="18sp"
            android:fontFamily="@font/lato"
            android:textFontWeight="500"
            android:textColor="@color/black"
            app:layout_constraintLeft_toRightOf="@id/image_notify"
            app:layout_constraintTop_toTopOf="@id/view_notify"
            app:layout_constraintBottom_toBottomOf="@id/view_notify"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:background="@color/gray"
            android:layout_marginRight="12dp"
            app:layout_constraintBottom_toBottomOf="@id/view_notify"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/tv_label_notify"/>

        <View
            android:id="@+id/view_version"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@id/view_line_logout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_notify" />
        <ImageView
            android:id="@+id/image_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/view_version"
            app:layout_constraintBottom_toBottomOf="@+id/view_version"
            android:src="@drawable/ic_reuse_gray_icon"/>
        <TextView
            android:id="@+id/tv_label_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:fontFamily="@font/lato"
            android:text="@string/version"
            android:textFontWeight="500"
            app:layout_constraintLeft_toRightOf="@id/image_version"
            app:layout_constraintTop_toTopOf="@id/view_version"
            app:layout_constraintBottom_toBottomOf="@+id/view_version"/>
        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1.0.0"
            android:textColor="@color/gray_cancel_search_message"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginHorizontal="12dp"
            app:layout_constraintTop_toTopOf="@id/view_version"
            app:layout_constraintBottom_toBottomOf="@id/view_version"/>
        <View
            android:id="@+id/view_logout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.09"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <ImageView
            android:id="@+id/image_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:src="@drawable/ic_logout_red_icon"
            app:layout_constraintBottom_toBottomOf="@id/view_logout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/view_logout" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:fontFamily="@font/lato"
            android:text="@string/logout"
            android:textColor="#C92323"
            android:textFontWeight="500"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/view_logout"
            app:layout_constraintLeft_toRightOf="@id/image_logout"
            app:layout_constraintTop_toTopOf="@id/view_logout" />

        <View
            android:id="@+id/view_line_logout"
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:background="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/view_version"
            app:layout_constraintBottom_toTopOf="@id/view_logout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>